--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,18 @@
   <groupId>com.wangguangwu</groupId>
   <artifactId>netty-learning</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <name>netty-learning</name>
   <url>http://maven.apache.org</url>
+  <modules>
+    <module>netty-io-modules</module>
+  </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <dependencies>
